# ESBNPlus

./: .dockerignore  .env  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Rocket.toml  data.db  data.db-shm  data.db-wal  design.md  tailwind.config.js
.sqlx/: query-51dc758187954307a9184a201209d592a847ccb51ea7203349bafc51c65521a1.json  query-feee21457a96c17b2e853e4ffa6efc580b87301d0b7d5a0179347b5c4f3d95dc.json
ESRB Plus API/: Genres.bru  Stuff.bru  bruno.json  collection.bru
assets/: main.css
migrations/: 20240208234714_init.sql  20240208235220_reviews.sql  20240228011020_new_reviews.sql
src/: api_helpers.rs  auth.rs  browse.rs  esrb_content_descriptors.txt  game.rs  main.rs  review.rs  search.rs  utils.rs
templates/: base.html.tera  browse.html.tera  browse_section.html.tera  game.html.tera  index.html.tera  login.html.tera  logout.html.tera  review_ui.html.tera  search.html.tera  search_results.html.tera  signup.html.tera
