[package]
name = "esbn_plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
log = "0.4.20"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros"] }
tera = "1.19.1"
uuid = { version = "1.7.0", features = ["v4"]}
